--- a/front/assets/CSS/styles.css
+++ b/front/assets/CSS/styles.css
@@ -62,6 +62,12 @@ html{
 #add-pokemon-to-team-modal-content{
   text-align: center;
   background-color: rgb(209, 87, 87);
+
+}
+
+#add-pokemon-to-team-btn:hover{
+  
+  transform: scale(1.05);
 }
 
 #edit-team-modal-content{
@@ -79,11 +85,24 @@ html{
 #add-pokemon-to-team-btn{
   border-radius: 10px;
     padding: 10px;
+    cursor: pointer;
 }
 
 #team-select{
   border-radius: 10px;
     padding: 10px;
+}
+
+#team-select:hover{
+  transform: scale(1.05);
+}
+
+.navbar-button.login:hover{
+  transform: scale(1.05);
+}
+
+.navbar-button.signup:hover{
+  transform: scale(1.05);
 }
 
 .modal-content h2{
@@ -92,6 +111,10 @@ html{
 .button.is-primary{
   background-color: rgb(209, 87, 87);
   color: white;
+}
+
+.button.is-primary:hover{
+  transform: scale(1.05);
 }
 
 .close-btn {
